# Machine-Oriented-programming-Project-2

./: CMakeLists.txt  README.md
diagrams/: StateDiagram.puml  checkIfWinner_activity.puml  dm_model.puml  ld_activity.puml  linked_insert_activity.puml  main_activity.puml  playPhase_acitivity.puml  sd_activity.puml  si_activity.puml  sr_activity.puml  startUpPhase_activity.puml  uc_diagram.puml
resources/: duplicateDeckTest.txt  fakeCardTest.txt  otherOrderTest.txt
src/: commands.c  commands.h  deck.c  deck.h  linkedlist  linkedlist.c  linkedlist.h  main.c  myprogram  view.c  view.h
test/: main_test.c
